--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/Picture2.jpg" alt="" />
+                  <img src="assets/images/2022-07-23-123620146.jpg" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
