--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-image">
-                  <img src="assets/images/Doc1.jpg" alt="" />
+                  <img src="assets/images/IMG_20220724_091228.jpg" alt="" />
                 </div>
               </div>
             </div>
